# fixlang

./: .gitignore  BuiltinLibraries.md  CHANGELOG.md  CLAUDE.md  Cargo.lock.20230102.bak  Cargo.toml  Document-ja.md  Document.md  Documentation.md  LICENSE  PLAN.md  README.md  Std.md  _config.yml  a.out  about.toml  bit  build_distribution.sh  development.md  install.sh  ir  main.ll  passes_optimizer.py  post_opt.ll  pre_opt.ll  registry.toml  run_fix.ipynb  run_fix_1.ipynb  run_fix_2.ipynb  runtime.c.bak  test.fix  valgrind.supp
.github/: copilot-instructions.md
benches/: typecheck.rs
benchmark/: bench_pass_optimize.fix  bench_prime_loop.sh  copy_lines.fix  count_loop.fix  count_recursion.fix  prime_fix_nocapture.fix  prime_loop.cpp  prime_loop.fix  prime_recursion_tuple.fix  sum_up_global_array.fix
example/: array_and_fix.fix  eratosthenes.fix  fibonacci_array.fix  search_array.fix  sum_by_loop.fix  use_trait.fix
examples/: 99prob_1.fix  99prob_2.fix  99prob_5.fix  99prob_7.fix  array_and_loop.fix  associated_type.fix  asynctask_sum.fix  basic_syntax.fix  call_c.fix  fib_fix.fix  fib_loop.fix  fib_recursion.fix  hashtable_bench.fix  hello_world.fix  import_main.fix  iterator.fix  loop.fix  namespaces_and_overloading.fix  pattern_matching.fix  prime_loop.fix  prime_loop_nocapture.fix  prime_recursion.fix  process_text_file.fix  pythagoras.fix  run_subprocess.fix  structs.fix  trait.fix  type_annotation.fix  type_level_nums.fix  unions.fix  vector.fix
runtime/: Cargo.toml  build.sh  fixruntime.bc  fixruntime.ll
sanitizer/: Cargo.toml  build.sh  fixsanitizer.bc  fixsanitizer.ll
src/: ast.rs  asynctask.rs  borrow_optimization.rs  borrowing_optimization.rs  build_object_files.rs  builtin.rs  c_config.rs  check_program.rs  compile_unit.rs  config_file.rs  configuration.rs  constants.rs  cpu_features.rs  debug.fix  dependency_lockfile.rs  dependency_resolver.rs  deps_list.rs  docgen.rs  env_vars.rs  error.rs  funptr_optimization.rs  generator.rs  grammer.pest  graph.rs  hash.fix  hashmap.fix  hashset.fix  language_server.rs  lib.rs  libdebug.fix  libdebug.rs  libstd.fix  libstd.rs  llvm_passes.csv  llvm_passes.rs  llvm_passes.txt  llvm_passes_hand.rs  llvm_passes_opt.rs  llvm_passes_optimized.txt  log.rs  (+27 more)
std_doc/: Std.md  fixproj.toml  (+2 more)
(+696 files in other folders)
