[package]
name = "fixlang"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
once_cell = "1.13.0"
inkwell = { git = "https://github.com/TheDan64/inkwell", branch = "master", features = ["llvm12-0"] }
either = "1.7.0"
pest = "2.3.0"
pest_derive = "2.2"
libloading = "0.7"
serial_test = "0.4.0"
clap = "3.2.0"
md5 = "0.7.0"

# TODO: use rustc-llvm-proxy: 
# rustc-llvm-proxy = "0.2"
# [dependencies.llvm-sys]
# version = "120"
# features = ["no-llvm-linking", "disable-alltargets-init"]
