[package]
name = "fixlang"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
once_cell = "1.13.0"
inkwell = { git = "https://github.com/TheDan64/inkwell", branch = "master", features = ["llvm12-0"] }
either = "1.7.0"
pest = "2.3.0"
pest_derive = "2.2"
libloading = "0.7"
serial_test = "0.4.0"
clap = "3.2.0"
md5 = "0.7.0"
serde = { version = "1.0.164", features = ["rc", "derive"] }
serde_json = "1.0.97"
build-time = "0.1.3"
chrono = "0.4.26"
serde-pickle = "1.1.1"
regex = "1.9.3"

[[bin]]
name = "fix"
path = "src/main.rs"

