[package]
name = "fixlang"
version = "1.1.0"
edition = "2021"
license-file = "LICENSE"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
once_cell = "1.13.0"
inkwell = { version = "0.5.0", features = ["llvm17-0"] }
either = "1.7.0"
pest = "2.3.0"
pest_derive = "2.2"
libloading = "0.7"
serial_test = "0.4.0"
clap = "3.2.0"
md5 = "0.7.0"
serde = { version = "1.0.164", features = ["rc", "derive"] }
serde_json = "1.0.97"
build-time = "0.1.3"
chrono = "0.4.26"
serde-pickle = "1.1.1"
regex = "1.9.3"
rand = "0.8.5"
num-bigint = "0.4.4"
lsp-types = "0.97.0"
toml = "0.8.19"
difference = "0.4"
semver = "1.0.23"
git2 = "0.19.0"
tempfile = "3.12.0"
reqwest = { version = "0.12", features = ["blocking"] }
num_cpus = "1.16.0"
dirs = "5.0.1"
fxhash = "0.2.1"
urlencoding = "2.1.3"
colored = "2.1.0"
git-version = "0.3.9"

[[bin]]
name = "fix"
path = "src/main.rs"
